--- a/index.html
+++ b/index.html
@@ -6,6 +6,5 @@
     <title>Document</title>
 </head>
 <body></body>
-<script src ="HelloJS.js"
-        src ="PracticeQuestions.js"> </script>
+<script src ="HelloJS.js"> </script>
 </html>
