--- a/index.html
+++ b/index.html
@@ -7,4 +7,6 @@
 </head>
 <body></body>
 <script src ="HelloJS.js"> </script>
+
+<script src ="./AdvanceJS.js/FunctionsExample.js"> </script>
 </html>
